# random_spaceship_game

./: .clang-format  .gitignore  CMakeLists.txt  README.md  given_implem.cpp  main.cpp
.github/workflows/: build.yml
